fix light design for wrapped ionic stuff

--- a/src/evan-themes/light.scss
+++ b/src/evan-themes/light.scss
@@ -25,7 +25,7 @@
   https://evan.network/license/
 */
 
-.evan-angular.evan-light {
+.evan-light .evan-angular {
   @import '../theme';
   @import '../variables/colors-light';
   @include evanTheme($colors, $evanStyles);
